--- a/disign_pro/templates/base.html
+++ b/disign_pro/templates/base.html
@@ -23,7 +23,7 @@
         <ul class="navbar-nav">
             {% if user.is_authenticated %}
                 <li class='nav-item'>
-                    <a class='nav-link' href='{% url "application" %}'>Создать заказ</a>
+                    <a class='nav-link' href='{% url "create_order" %}'>Создать заказ</a>
                 </li>
                 <li class='nav-item'>
                     <a class='nav-link' href='{% url "orders" %}'>Мои заказы</a>
@@ -45,7 +45,9 @@
 </nav>
 <main role="main" class="container">
     <div class="start-template">
-        {% block content %}{% endblock %}
+        {% block content %}
+
+        {% endblock %}
     </div>
 </main>
 
