--- a/disign_pro/templates/general/home.html
+++ b/disign_pro/templates/general/home.html
@@ -1,4 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Главная страница</h1>
+
+
+    {% if order_list %}
+        <div id="order_list">
+        {% for order in order_list %}
+        {% if order.status == 'accepted' %}
+            <div class="accepted">
+                <p><strong>{{ order.time_create }}</strong></p>
+                <p><strong>Заказ: </strong>{{ order.title }}</p>
+                <p><strong>Категория заказа: </strong>{{ order.category }}</p>
+                <img src="{{ order.photo.url }}">
+            </div>
+        {% endif %}
+        {% endfor %}
+        </div>
+    {% else %}
+        <p><strong>Здесь пока нет заказов!</strong></p>
+    {% endif %}
+
+
+
 {% endblock %}
