--- a/disign_pro/templates/registration/create_order.html
+++ b/disign_pro/templates/registration/create_order.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Создать заказ</h1>
-    <form method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {{ form.as_p }}
         {% csrf_token %}
         <button type="submit" class="btn btn-primary">Создать</button>
