--- a/disign_pro/templates/general/order_delete.html
+++ b/disign_pro/templates/general/order_delete.html
@@ -4,7 +4,7 @@
 
 <h1>Delete Order</h1>
 
-<p>Are you sure you want to delete the order: {{ order }}?</p>
+<p>Are you sure you want to delete the order: {{ order.title }}?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
